--- a/sass/components/_waves.scss
+++ b/sass/components/_waves.scss
@@ -28,6 +28,7 @@
   width: 100%;
   position: relative;
   top: 0;
+  overflow:hidden;
 
 }
 
